<resources>
    <string name="app_name">Your_BMI </string>
    <string name="underweight">Underweight</string>
    <string name="optimal">Optimal</string>
    <string name="overweight">Overweight</string>
    <string name='bmi'>BMI</string>
    <string name="please_enter_both_height_and_weight">Please enter both values: height and weight</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="calculate">Calculate</string>
    <string name="kcal_calc">CALORIES Calculator</string>
    <string name="diets">DIETS</string>
    <string name="title_activity_kcal_calculator">Kcal Calculator</string>
    <string name="age">Age</string>
    <string name="invalid_input">Invalid input</string>
    <string name="activity">How often do you exercise?</string>
</resources>